<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.MainActivity">

    <!--title-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:orientation="horizontal"
        android:background="@color/grey">
<!--title_rating-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/size_big_72"
            android:layout_weight="0.2"
            android:orientation="vertical"
            android:gravity="center_vertical"

            android:layout_marginLeft="@dimen/spacing_normal_16"
            android:layout_marginRight="@dimen/spacing_normal_16">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                android:id="@+id/rating_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_normal_16"
                android:text="@string/title_rating"
                android:textSize="24sp"
                android:textColor="@color/white"
                />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Рейтинг"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <View
            android:layout_width="@dimen/line_size"
            android:layout_height="@dimen/spacing_larger_72"
            android:background="@color/grey_light"
            android:layout_gravity="center_vertical"
           />
<!--title_code-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/size_big_72"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:gravity="center_vertical"

            android:layout_marginLeft="@dimen/spacing_normal_16"
            android:layout_marginRight="@dimen/spacing_normal_16">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/code_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_maxi_48"
                    android:text="@string/title_code_strok"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Написано строк кода"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <View
            android:layout_width="@dimen/line_size"
            android:layout_height="@dimen/spacing_larger_72"
            android:background="@color/grey_light"
            android:layout_gravity="center_vertical"
            />
        <!--title_project-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/size_big_72"
            android:layout_weight="0.2"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:background="@color/grey"

            android:layout_marginLeft="@dimen/spacing_normal_16"
            android:layout_marginRight="@dimen/spacing_normal_16">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/cod_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_medial_24"
                    android:text="@string/title_project"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Проектов"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>




    </LinearLayout>

    <!--phone-->
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:layout_marginBottom="@dimen/spacing_small_8">


        <ImageView
          style="@style/icon.left"
          android:src="@drawable/ic_call_black_24dp"/>

        <LinearLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/size_big_72"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="bottom"

            android:layout_marginLeft="@dimen/spacing_medium_32"
            android:layout_marginRight="@dimen/spacing_normal_16">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/phone_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="Мобильный телефон"
                    android:text="@string/phone"
                    android:textSize="14dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:enabled="false"
                    android:focusable="false"/>


            </android.support.design.widget.TextInputLayout>
      </LinearLayout>


        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_phone_in_talk_black_24dp"

      />
  </LinearLayout>
    <View
    android:layout_width="match_parent"
    android:layout_height="@dimen/line_size"
    android:background="@color/grey_light"
    android:layout_marginLeft="@dimen/spacing_larger_72"/>

    <!--e-mail-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:layout_marginBottom="@dimen/spacing_small_8">


        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_email_black_24dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/size_big_72"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="bottom"

            android:layout_marginLeft="@dimen/spacing_medium_32"
            android:layout_marginRight="@dimen/spacing_normal_16">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:enabled="false"
                    android:focusable="false"
                    android:textSize="14dp"
                    android:text="@string/email"
                    android:hint="E-mail"/>


            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_send_black_24dp"

            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:background="@color/grey_light"
        android:layout_marginLeft="@dimen/spacing_larger_72"/>

    <!--vk-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:layout_marginBottom="@dimen/spacing_small_8">


        <ImageView
            style="@style/icon.left"
            android:src="@drawable/vk_circle_24dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/size_big_72"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="bottom"

            android:layout_marginLeft="@dimen/spacing_medium_32"
            android:layout_marginRight="@dimen/spacing_normal_16">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/vk_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textSize="14dp"
                    android:hint="Профиль в VK"
                    android:text="@string/vk"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:enabled="false"
                    android:focusable="false"/>


            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_remove_red_eye_black_24dp"

            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:background="@color/grey_light"
        android:layout_marginLeft="@dimen/spacing_larger_72"/>

    <!--github-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:layout_marginBottom="@dimen/spacing_small_8">


        <ImageView
            style="@style/icon.left"
            android:src="@drawable/github_circle_24dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/size_big_72"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="bottom"

            android:layout_marginLeft="@dimen/spacing_medium_32"
            android:layout_marginRight="@dimen/spacing_normal_16">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/github_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:textSize="14dp"
                    android:hint="Репозиторий"
                    android:text="@string/github"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:enabled="false"
                    android:focusable="false"/>


            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_remove_red_eye_black_24dp"

            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:background="@color/grey_light"
        android:layout_marginLeft="@dimen/spacing_larger_72"/>

    <!--About-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:layout_marginBottom="@dimen/spacing_small_8">


        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_account_circle_black_24dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="bottom"

            android:layout_marginLeft="@dimen/spacing_medium_32"
            android:layout_marginRight="@dimen/spacing_normal_16">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/about_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:textSize="14sp"
                    android:hint="О себе"
                    android:text="@string/about"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:enabled="false"
                    android:focusable="false"/>


            </android.support.design.widget.TextInputLayout>
        </LinearLayout>



    </LinearLayout>




</LinearLayout>
</android.support.v4.widget.NestedScrollView>
